<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Application</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_fullscreen">socialRun</string>
    <string name="dummy_button">Click to run</string>
    <string name="dummy_content">SOCIALRUN</string>
    <string name="title_activity_second_screen">SecondScreen</string>
    <string name="title_activity_first">FirstActivity</string>
    <string name="title_activity_profil">ProfilActivity</string>
    <string name="title_activity_mes_parcours">MesParcoursActivity</string>
    <string name="title_activity_connexion">Connexion</string>
    <string name="title_activity_enregistrer_parcours">Enregistrer_parcours</string>
    <string name="title_activity_noter__parcours">Noter_Parcours</string>
    <string name="question">Voulez-vous enregistrer le parcours ?</string>
    <string name="oui">oui</string>
    <string name="non">non</string>
    <string name="champ1">Nom du Parcours :</string>
    <string name="champ2">Note :</string>
    <string name="boutton">Sauvegarder</string>
    <string name="nomVide">Le nom du parcours est vide</string>
    <string name="favoris">Ajouter le parcours à mes favoris</string>
    <string name="email">Email</string>
    <string name="exemple_email">exemple@hote.com</string>
    <string name="password">Mot de passe</string>
    <string name="creer">Créer le compte</string>
    <string name="connexion">Se connecter</string>
    <string name="inscription">S\'inscrire</string>
    <string name="erreurCreation">Le compte n\'a pas pu être créé.</string>
    <string name="erreurConnexion">Connexion impossible.</string>
    <string name="chargement">Chargement en cours</string>
    <string name="invalides">L\'adresse e-mail ou le mot de passe n\'ont pas un format valide</string>
    <string name="question2">Voulez-vous noter le parcours ?</string>
    <string name="noter">Noter</string>
    <string name="nom_serveur">http://pims.tuxfamily.org/GPShoes</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_edit">EditActivity</string>
    <string name="deletemarker">Il n\'y a plus/pas de marker à supprimer</string>
    <string name="preparation">votre parcours est en cours de préparation</string>
    <string name="marker">Vous avez le droit à 8 markers</string>
    <string name="distancemin">Veuillez choisir une distance plus grande que 1 km</string>
    <string name="title_activity_parcours__alentours">Parcours_Alentours</string>
    <string name="title_activity_parcours__favoris">Parcours_Favoris</string>
    <string name="selectionner">Sélectionner</string>
    <string name="title_activity_parcours_adapter">ParcoursAdapter</string>
    <string name="addlong">Veuillez choisir la longueur du parcours</string>
    <string name="addmarker">Veuillez sélectionner plus de marker</string>
    <string name="thispath">Vous avez donc choisit ce parcours</string>
    <string name="distancemax">Veuillez choisir une distance plus petite que 50 km</string>
    <string name="title_activity_parcours__historique">Parcours_Historique</string>
    <string name="title_activity_guide">Guide</string>
    <string name="title_activity_blind">BlindActivity</string>

</resources>
